--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Lonimbus.com
+description: At the intersection of cloud technologies, devops, security, and infrastructure as code.
+meta_description: "At the intersection of cloud technologies, devops, security, and infrastructure as code."
 
 markdown: kramdown
 highlighter: pygments
 logo: false
 paginate: 15
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'https://www.lonimbus.com'
 google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            'https://www.lonimbus.com'
+author:         'Brad Geesaman'
