remove duplicate period

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Lonimbus.com
-description: At the intersection of cloud technologies, devops, security, and infrastructure as code.
+description: At the intersection of cloud technologies, devops, security, and infrastructure as code
 meta_description: "At the intersection of cloud technologies, devops, security, and infrastructure as code."
 
 markdown: kramdown
