--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Lonimbus.com
+name: (cumu)lonimbus
 description: At the intersection of cloud technologies, devops, security, and infrastructure as code
 meta_description: "At the intersection of cloud technologies, devops, security, and infrastructure as code."
 
