--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ gems: [jekyll-paginate]
 url:            'https://www.lonimbus.com'
 author:         'Brad Geesaman'
 bio:            'Automating myself out of a job is my job.'
+twitter:        'bradgeesaman'
